--- a/docs/app/assets/css/main.css
+++ b/docs/app/assets/css/main.css
@@ -1,5 +1,8 @@
+@import "tailwindcss";
+@import "@nuxt/ui-pro";
+
 @theme static {
-  /* --font-sans: 'Public Sans', sans-serif; */
+  --font-sans: 'Public Sans', sans-serif;
 
   --color-green-50: #EFFDF5;
   --color-green-100: #D9FBE8;
